--- a/src/app.scss
+++ b/src/app.scss
@@ -175,6 +175,10 @@ span{
       .shape-container{
         display: flex;
         gap:20px;
+
+        &.column{
+          flex-direction:column;
+        }
       }
     }
 
